# sumpfig

./: docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/src/app/: __init__.py  routes.py  server.py
backend/src/app/resources/: sound.py  soundcloud.py
backend/src/app/services/: soundcloud_scraper.py
backend/src/services/: mediainfo.py  souncloud_setlist.py  utils.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/src/: App.css  App.tsx  index.css  theme.ts
frontend/src/components/: ActivityFeed.tsx  AddSet.tsx  AddSetBar.tsx  AddSetForm.tsx  AppLayout.tsx  AppTopBar.tsx  AuthProvider.tsx  ErrorDialog.tsx  GroupSidebar.tsx  Login.tsx  SetManager.tsx  SetsTable.tsx  Sidebar.tsx  SidebarTrack.tsx  SongCard.tsx  Sounc.tsx  SoundCloudMetadataFetcher.tsx  SoundCloudPlayer.tsx  StarRating.tsx  TrackDetailRow.tsx  TrackFilters.tsx
frontend/src/data/: songs.json
frontend/src/firebaseServices/: firebaseConfig.js  firestore.js  firestore.ts
frontend/src/hooks/: useSoundCloud.ts
frontend/src/services/: soundCloudClient.ts
frontend/src/types/: activity.tsx  song.tsx  track.tsx  users.tsx
frontend/src/utils/: constants.ts
frontend/src/utils/validators/: userValidators.ts
soundcloud-service/: .dockerignore  Dockerfile  Program.cs  SoundCloudService.csproj  appsettings.json
