[tool.poetry]
name = "sumpfig"
version = "0.1.0"
description = "App to cluster expenses and visualize them"
authors = ["maregli <marc_e@hispeed.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.0"
Flask = "^3.1.0"
Flask-RESTful = "^0.3.10"
Flask-Cors = "^3.0.10"
numpy = "^2.2.2"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
shazamio = "^0.8.0"
yt-dlp = "^2025.3.31"
soundcloud-lib="0.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[tool.black]
line-length = 100
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
